Remove the duplicate java17 options
We've already got java17 options up at the top of the build file.